--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 GROUP_ID=com.github.Panha-Devs
-VERSION_NAME=1.0.0
+VERSION_NAME=v1.0.0
